--- a/Petrol station/src/assets/css/output.css
+++ b/Petrol station/src/assets/css/output.css
@@ -1774,6 +1774,10 @@ input[type="range"]::-ms-fill-lower {
   margin-top: 0.15rem;
 }
 
+.mr-\[0\.8rem\] {
+  margin-right: 0.8rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -2017,6 +2021,10 @@ input[type="range"]::-ms-fill-lower {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-12 {
+  height: 3rem;
 }
 
 .max-h-\[calc\(100\%-64px\)\] {
@@ -2271,6 +2279,14 @@ input[type="range"]::-ms-fill-lower {
 .min-w-max {
   min-width: -moz-max-content;
   min-width: max-content;
+}
+
+.min-w-\[200px\] {
+  min-width: 200px;
+}
+
+.min-w-\[170px\] {
+  min-width: 170px;
 }
 
 .max-w-\[200px\] {
@@ -2637,6 +2653,10 @@ input[type="range"]::-ms-fill-lower {
   align-items: flex-start;
 }
 
+.items-end {
+  align-items: flex-end;
+}
+
 .items-center {
   align-items: center;
 }
@@ -2869,6 +2889,10 @@ input[type="range"]::-ms-fill-lower {
   border-color: rgb(100 116 139 / var(--tw-divide-opacity));
 }
 
+.self-end {
+  align-self: flex-end;
+}
+
 .\!overflow-hidden {
   overflow: hidden !important;
 }
@@ -2978,6 +3002,10 @@ input[type="range"]::-ms-fill-lower {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded-\[5px\] {
+  border-radius: 5px;
 }
 
 .rounded-b-lg {
@@ -3243,6 +3271,11 @@ input[type="range"]::-ms-fill-lower {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(240 82 82 / var(--tw-border-opacity));
 }
 
 .border-l-gray-200 {
@@ -3767,6 +3800,11 @@ input[type="range"]::-ms-fill-lower {
   padding-bottom: 5px;
 }
 
+.py-2\.5 {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
+
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -3873,6 +3911,14 @@ input[type="range"]::-ms-fill-lower {
 
 .pt-\[0\.37rem\] {
   padding-top: 0.37rem;
+}
+
+.pl-\[3\.4rem\] {
+  padding-left: 3.4rem;
+}
+
+.pr-6 {
+  padding-right: 1.5rem;
 }
 
 .text-left {
@@ -4012,6 +4058,14 @@ input[type="range"]::-ms-fill-lower {
   line-height: 1rem;
 }
 
+.text-\[0\.78rem\] {
+  font-size: 0.78rem;
+}
+
+.text-\[0\.875rem\] {
+  font-size: 0.875rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -4098,6 +4152,10 @@ input[type="range"]::-ms-fill-lower {
 
 .leading-normal {
   line-height: 1.5;
+}
+
+.leading-tight {
+  line-height: 1.25;
 }
 
 .tracking-\[-0\.00833em\] {
@@ -5052,6 +5110,16 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-primary-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 81 146 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-slate-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+
 .hover\:fill-\[\#8b8b8b\]:hover {
   fill: #8b8b8b;
 }
@@ -5093,6 +5161,10 @@ input[type="range"]::-ms-fill-lower {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-inherit:hover {
+  color: inherit;
 }
 
 .hover\:underline:hover {
@@ -5203,6 +5275,16 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(229 229 229 / var(--tw-bg-opacity));
 }
 
+.focus\:bg-primary-700:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 81 146 / var(--tw-bg-opacity));
+}
+
+.focus\:bg-slate-50:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+
 .focus\:text-\[\#3b71ca\]:focus {
   --tw-text-opacity: 1;
   color: rgb(59 113 202 / var(--tw-text-opacity));
@@ -5223,6 +5305,10 @@ input[type="range"]::-ms-fill-lower {
   color: rgb(59 113 202 / var(--tw-text-opacity));
 }
 
+.focus\:text-inherit:focus {
+  color: inherit;
+}
+
 .focus\:\!opacity-90:focus {
   opacity: 0.9 !important;
 }
@@ -5236,6 +5322,12 @@ input[type="range"]::-ms-fill-lower {
 .focus\:shadow-te-primary:focus {
   --tw-shadow: 0 0 0 1px rgb(59, 113, 202);
   --tw-shadow-colored: 0 0 0 1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.focus\:shadow-lg:focus {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -5487,6 +5579,31 @@ input[type="range"]::-ms-fill-lower {
 .active\:bg-\[\#cacfd1\]:active {
   --tw-bg-opacity: 1;
   background-color: rgb(202 207 209 / var(--tw-bg-opacity));
+}
+
+.active\:bg-primary-800:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(32 64 117 / var(--tw-bg-opacity));
+}
+
+.active\:bg-slate-50:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+
+.active\:text-inherit:active {
+  color: inherit;
+}
+
+.active\:shadow-lg:active {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.active\:outline-none:active {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .group\/x:hover .group-hover\/x\:h-\[11px\] {
@@ -5767,6 +5884,10 @@ input[type="range"]::-ms-fill-lower {
   display: block;
 }
 
+.data-\[te-collapse-show\]\:block[data-te-collapse-show] {
+  display: block;
+}
+
 .data-\[popper-reference-hidden\]\:hidden[data-popper-reference-hidden] {
   display: none;
 }
@@ -5859,6 +5980,10 @@ input[type="range"]::-ms-fill-lower {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
+.data-\[te-sidenav-state-active\]\:text-inherit[data-te-sidenav-state-active] {
+  color: inherit;
+}
+
 .data-\[te-carousel-fade\]\:opacity-0[data-te-carousel-fade] {
   opacity: 0;
 }
@@ -5869,6 +5994,11 @@ input[type="range"]::-ms-fill-lower {
 
 .data-\[te-select-open\]\:opacity-100[data-te-select-open] {
   opacity: 1;
+}
+
+.data-\[te-sidenav-state-focus\]\:outline-none[data-te-sidenav-state-focus] {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .data-\[te-carousel-fade\]\:duration-0[data-te-carousel-fade] {
@@ -6336,6 +6466,10 @@ input[type="range"]::-ms-fill-lower {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+:is(.dark .dark\:active\:bg-white\/10:active) {
+  background-color: rgb(255 255 255 / 0.1);
+}
+
 :is(.dark .group[data-te-datepicker-cell-current] .dark\:group-\[\[data-te-datepicker-cell-current\]\]\:border-white) {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
@@ -6420,8 +6554,16 @@ input[type="range"]::-ms-fill-lower {
     display: block;
   }
 
+  .ipad\:inline-block {
+    display: inline-block;
+  }
+
   .ipad\:flex {
     display: flex;
+  }
+
+  .ipad\:inline-flex {
+    display: inline-flex;
   }
 
   .ipad\:grid {
@@ -7096,6 +7238,26 @@ input[type="range"]::-ms-fill-lower {
   fill: #737373;
 }
 
+.\[\&\>svg\]\:text-gray-400>svg {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.\[\&\>svg\]\:text-gray-600>svg {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.\[\&\>svg\]\:text-white>svg {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 :is(.dark .dark\:\[\&\>svg\]\:fill-white>svg) {
   fill: #ffffff;
+}
+
+:is(.dark .dark\:\[\&\>svg\]\:text-gray-300>svg) {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
